# tcp-chat

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
client/: CMakeLists.txt
client/src/: main.cpp
client/src/client/: client.cpp  client.h
common/: CMakeLists.txt
common/include/common/sync/: sync.h
common/src/logger/: logger.cpp  logger.h
common/src/sync/: sync.h
protocol/: CMakeLists.txt
protocol/include/protocol/codec/: codec.h  string_codec.h  uint32_codec.h  uint8_codec.h  varint_codec.h
protocol/include/protocol/packet/: packet.h  state.h
protocol/include/protocol/packet/clientbound/chat/: send_message.h
protocol/include/protocol/packet/clientbound/config/: acknowledge_name.h
protocol/include/protocol/packet/serverbound/chat/: send_message.h
protocol/include/protocol/packet/serverbound/config/: set_name.h
protocol/src/: test.h
protocol/src/butebuf/: bytebuf.h
protocol/src/bytebuf/: bytebuf.cpp
protocol/src/codec/: codec.h  string_codec.cpp  string_codec.h  uint32_codec.cpp  uint32_codec.h  uint8_codec.cpp  uint8_codec.h  varint_codec.cpp
protocol/src/packet/: packet.h
protocol/src/packet/clientbound/chat/: send_message.cpp  send_message.h
protocol/src/packet/clientbound/config/: acknowledge_name.cpp  acknowledge_name.h
protocol/src/packet/serverbound/chat/: send_message.cpp  send_message.h
protocol/src/packet/serverbound/config/: set_name.cpp  set_name.h
protocol/tests/: test.cpp
server/: CMakeLists.txt
server/src/: main.cpp
server/src/chat/: chat_client.cpp  chat_client.h  chat_server.cpp  chat_server.h
server/src/logger/: logger.cpp  logger.h
server/src/server/: client.h  server.cpp  server.h
